<resources>
    <string name="app_name">EventPlanner</string>
    <string name="event_planner">Event Planner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_5_events">Top 5 events</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open" translatable="false">Navigation Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Navigation Drawer Close</string>
    <string name="language">Language</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="top_5_services_or_products">Top 5 services or products</string>
    <string name="profile">Profile</string>
    <string name="select_category">Select a category</string>
    <string name="events">Events</string>
    <string name="new_event">New event</string>
    <string name="services_and_products">Services and products</string>
    <string name="filter">Filter</string>
    <string name="filters_label">Filters:</string>
    <string name="event_type_label">Event type:</string>
    <string name="select">Select</string>
    <string name="clear">Clear</string>
    <string name="max_attendances">Max attendances:</string>
    <string name="open_label">Open:</string>
    <string name="distance_label">Maximum distance (km):</string>
    <string name="date_label">Date:</string>
    <string name="locations_label">Locations:</string>
    <string name="category_label">Category:</string>
    <string name="price_label">Price:</string>
    <string name="duration_label">Duration:</string>
    <string name="available_event_types_label">Available Event Types:</string>
    <string name="automatic_reservation_label">Automatic Reservation:</string>
    <string name="services">Services</string>
    <string name="products">Products</string>
    <string name="my_events">My Events</string>
    <string name="event_types">Event Types</string>
    <string name="new_event_type">New Event Type</string>
    <string name="new_product">New Product</string>
    <string name="my_products">My Products</string>
    <string name="new_service">New Service</string>
    <string name="more_info">More info</string>
    <string name="read_more">Read more</string>
    <string name="read_less">Read less</string>
    <string name="notifications">Notifications</string>
    <string name="channel_name">Notifications</string>
    <string name="channel_description">Notifications channel</string>
    <string name="receive_notifications">Receive notifications</string>
    <string name="you_will_no_longer_receive_notifications">You\'ll no longer receive notifications</string>
    <string name="you_will_receive_notifications_again">You\'ll receive notifications again</string>
    <string name="failed_to_mute_notifications">Failed to mute notifications</string>
    <string name="failed_to_unmute_notifications">Failed to unmute notifications</string>
    <string name="website">Website</string>
    <string name="specifics">Specifics: </string>
    <string name="reservation_deadline">Reservation deadline: </string>
    <string name="cancellation_deadline">Cancellation deadline: </string>
    <string name="duration">Duration: </string>
    <string name="automatic_reservation_ability">Automatic reservation ability: </string>
    <string name="number_days">%1$d days</string>
    <string name="invitations">Invitations</string>
    <string name="invitee_email">Invitee email</string>
    <string name="processing_invitation">Processing invitation…</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="upload_new_picture">Upload New Picture</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    
    <string name="upgrade_account">Upgrade Account</string>
    <string name="upgrade_account_description">Complete your registration to access all features</string>
    <string name="upgrade_to_event_organizer">Upgrade to Event Organizer</string>
    <string name="upgrade_to_service_provider">Upgrade to Service Provider</string>
    <string name="upgrade_success">Account upgraded successfully!</string>
    <string name="upgrade_failed">Failed to upgrade account. Please try again.</string>
    <string name="email_locked">Email is locked for upgrade</string>
    <string name="logout_and_upgrade">Logout &amp; Upgrade</string>
    <string name="upgrade_now">Upgrade Now</string>
    <string name="company_description">Company Description</string>
    <string name="company_description_hint">Describe your company and services</string>
    
    <string name="report_user">Report User</string>
    <string name="report_reason">Enter reason</string>
    <string name="report_reason_hint">Please provide details about the issue</string>
    <string name="report_success">Report sent successfully</string>
    <string name="report_failed">Failed to send report</string>
    <string name="report_cancel">Cancel</string>
    <string name="report_submit">Report</string>
    <string name="authentication_required">Authentication Required</string>
    <string name="login_to_report">To submit a report, you need to be logged in. Please log in to continue.</string>
    <string name="suspend_user">Suspend User</string>
    <string name="suspend_success">User suspended successfully</string>
    <string name="suspend_failed">Failed to suspend user</string>
    
    <string name="account_suspended">Account Suspended</string>
    <string name="suspension_message">Your account has been temporarily suspended due to a violation of our community guidelines.</string>
    <string name="suspension_duration">The suspension will be lifted %1$s.</string>
    <string name="suspension_close">Close</string>
    <string name="account_temporarily_suspended">Your account is temporarily suspended</string>
    <string name="chat">Chat</string>
    <string name="review_comment">Review comment</string>
    <string name="user_reports">User Reports</string>
    <string name="reviews">Reviews</string>
    <string name="bookings">Pending Bookings</string>
    <string name="select_date">Select Date</string>
</resources>